--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
         port: 22
         script: |
           cd /var/www/manuscript-client
-          git pull origin master
+          git pull origin main
           docker-compose build
           docker-compose up -d
