--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
 	"plugins": [],
 	"rules": {
 		"vue/multi-word-component-names": "off",
-		"@typescript-eslint/no-empty-function": "off"
+		"@typescript-eslint/no-empty-function": "off",
+		"@typescript-eslint/no-inferrable-types": "off"
 	}
 }
