--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.3.6",
+		"primevue": "^3.28.0",
 		"qs": "^6.11.1",
 		"vue": "^3.2.47",
 		"vue-router": "^4.1.6"
