--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     restart: always
     volumes:
       - .:/usr/src/app
-    # command: sh -c "yarn install && yarn build && yarn run dev"
+    environment:
+      - VITE_API_PROXY=http://64.226.81.189
 
   nginx-proxy:
     build: ./proxy
